fix cancel btn bug when collapse form

--- a/src/components/NewExpense/ExpenseForm.css
+++ b/src/components/NewExpense/ExpenseForm.css
@@ -1,10 +1,10 @@
 .new-expense__controls {
-  display: flex;
+  display: none;
   flex-wrap: wrap;
   gap: 1rem;
   margin-bottom: 1rem;
   text-align: left;
-  display: none;
+
 }
 
 .new-expense__controls.collapse-form {
@@ -32,4 +32,13 @@
 
 .new-expense__actions.collapse-center {
   text-align: right;
+}
+
+.new-expense__actions-btn-hide {
+  display: none;
+}
+
+.new-expense__actions-btn-show {
+  display: inline;
+
 }
